cmake_minimum_required(VERSION 3.27)
project(Programacion)

set(CMAKE_CXX_STANDARD 14 )

        add_executable(Programacion
        "Practica_11_Miguel Calata_else.cpp"
        "Practica_11_Miguel Calata_if.cpp"
        "Practica_12_ Miguel Calata.cpp"
        "Practica_12_Miguel Calata_Calificaciones.cpp"
        "Practica_13_Miguel Calata.cpp"
        "Practica_14_Miguel Calata.cpp"
        "Practica_15_Miguel Calata.cpp"
        "Practica_16_Miguel Calata.cpp"
        "Practica_17_Miguel Calata.cpp"
        "Practica_18_Miguel Calata.cpp"
        "Practica_19_Miguel Calata.cpp"
        "Practica_1_Miguel Calata.cpp"
        "Practica_20_Miguel Calata.cpp"
        "Practica_21_Miguel Calata.cpp"
        "Practica_22_Miguel Calata.cpp"
        "Practica_24_Miguel Calata.cpp"
        "Practica_25_Miguel Calata.cpp"
        "Practica_26_Miguel Calata.cpp"
        "Practica_27_Miguel Calata.cpp"
        "Practica_28_Miguel Calata.cpp"
        "Practica_29_Miguel Calata.cpp"
        "Practica_2_Miguel Calata.cpp"
        "Practica_30_Miguel Calata.cpp"
        "Practica_3_Miguel Calata.cpp"
        "Practica_4_Miguel Calata.cpp"
        "Practica_5_Miguel Calata.cpp"
        Practica_6_Miguel_Calata.cpp
        Practica_8_Miguel_Calata.cpp
        Tarea_03_MD.cpp
                Practica_32_Miguel_Calata.cpp
                "Practica_33_Miguel Calata.cpp"
                "Practica_34_Miguel Calata.cpp"
                "Practica_35_Miguel Calata.cpp"
                "Practica_36_Miguel Calata.cpp"
                Intento_funciones.cpp
                "Practica_39_Miguel Calata.cpp"
                "Practica_40_Miguel Calata.cpp"
                "Practica_40_Miguel Calata_Pares.cpp"
                "Practica_41_Miguel Calata.cpp"
                "Practica_42_Miguel Calata.cpp"
                "Practica_44_Miguel Calata.cpp"
                "Practica_43_Miguel Calata.cpp"
                "Practica_45_Miguel Calata.cpp"
                "Practica_46_Miguel Calata.cpp"
                "Practica_54_Miguel Calata.cpp"
                "Practica_55_Miguel Calata.cpp"
                "Practica_56_Miguel Calata.cpp"
                "Practica_58_Miiguel Calata.cpp"
                "Practica_59_Miguel Calata.cpp"
                "Practica_61_Miguel Calata.cpp"
                "Practica_62_Miguel Calata.cpp"
                "Practica_62_Miguel Calata.cpp"
                "Practica_62_Miguel Calata.cpp"
                "Hola buenas.cpp"
                Tarea_Actividad_MD_01.cpp
                "Practica_57_Miguel Calata.cpp"
                "Practica_57_Miguel Calata.cpp"
                Tarea_Actividad_MD_01.cpp
                "Proyecto_Programacion_Miguel Calata.cpp"
                "Practica_63_Miguel Calata.cpp"
                "arreglos y funciones.cpp"
                "Campo de pruebas.cpp"
                "campo de pruebas2.cpp"
                "Practica_67_Miguel Calata"
                Hola.cpp
                Prueba_impresora_gato.cpp
                "Practica_67_Miguel Calata.cpp"
                "Un proyecto que no es mio.cpp"
                Adrian.cpp
                juego.cpp
                Untitled1.cpp
                ED05_MiFactura_Miguel.cpp
        )
